--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,4 +35,4 @@ jobs:
         uses: actions/upload-artifact@v1
         with:
           name: main
-          path: ${{ github.workspace }}/main
+          path: ${{ github.workspace }}/src/main
